# E-commerce_app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
ecommerce/: settings.py  urls.py
ecommerce/apps/carts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
ecommerce/apps/carts/migrations/: 0001_initial.py  0002_remove_cart_price_cart_is_purchased_alter_cart_user_and_more.py  0003_order.py  0004_remove_order_address_remove_order_user.py
ecommerce/apps/products/: models.py  serializers.py  tests.py  urls.py  views.py
ecommerce/apps/products/migrations/: 0001_initial.py
ecommerce/apps/users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
ecommerce/apps/users/migrations/: 0001_initial.py  0002_address.py  0003_alter_address_phone.py
ecommerce/ecommerce/: settings.py
